# TFRS

./: .gitignore  Qt_tool.py  README.en.md  README.md  TFRS.ipynb  TFRS.py  TFRS_predict.py  TFRS_test.py  TFRS_train.py  main.ipynb  pyproject.toml  requirements.txt
ML/: __init__.py
ML/datas/: __init__.py  image_data.py
ML/pridicts/: __init__.py  image_predict.py
ML/tests/: __init__.py  image_test.py
ML/trains/: __init__.py  image_train.py
ML/utils/: __init__.py  accumulator.py  accuracy.py  animator.py  cuda.py
src/: TFRS.ipynb  dataloader.py
templates/: home.html  index.html  predict.html
